workspace = { members = [ "tiles","tiles/tiles"] }
[package]
name = "sunlight-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
base64_impl = { version = "0.22.0", package = "base64" }
heed = "0.11.0"
nom = "7.1.3"
rasn = "0.14.0"
rasn-pkix = "0.14.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }

# These are preleases to have access to the following function
# https://docs.rs/ecdsa/0.17.0-pre.5/ecdsa/hazmat/fn.sign_prehashed_rfc6979.html
# Move to stable versions when available
ecdsa = { version = "0.17.0-pre.4", features = [
    "hazmat",
    "rfc6979",
    "arithmetic",
] }
p256 = { git = "https://github.com/RustCrypto/elliptic-curves", rev = "6ff3bb7", package = "p256", features = [
    "pem",
] }
sha2 = "0.11.0-pre.3"

[dev-dependencies]
indoc = "2.0.5"
tempfile = "3.10.1"
